Добавил картинки. Причесал заголовки

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 <div class="slides">
 	<section>
 		<h3>как начать писать тесты</h3>
-		<p>
-			<small>Сергей, Яндекс</small>
-		</p>
+
+        <p>Сергей Жигалов</p>
+        <p><span style="color: red">Я</span>ндекс</p>
 	</section>
 
     <section>
@@ -128,7 +128,7 @@ describe('Slug generator', function () {
 			progress: true,
             slideNumber: true,
 			center: true,
-			transition: 'concave',
+			transition: 'slide',
             history: true,
             dependencies: [
 				{ src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
