Добавил ссылки на примеры и слайды

--- a/index.html
+++ b/index.html
@@ -638,12 +638,15 @@ it('should translate', function (done) {
         <h3>Спасибо!</h3>
 
         <ul>
-            <li><a href="https://mochajs.org/">https://mochajs.org/</a></li>
-            <li><a href="http://chaijs.com/">http://chaijs.com/</a></li>
-            <li><a href="https://github.com/mfncooper/mockery">https://github.com/mfncooper/mockery</a></li>
-            <li><a href="http://sinonjs.org/">http://sinonjs.org/</a></li>
-            <li><a href="https://github.com/pgte/nock">https://github.com/pgte/nock</a></li>
-            <li><a href="https://travis-ci.org/">https://travis-ci.org/</a></li>
+            <li><a href="https://github.com/Zhigalov/frontend-fellows-test">github.com/Zhigalov/frontend-fellows-test</a></li>
+            <li><a href="https://zhigalov.github.io/frontend-fellows-slides">zhigalov.github.io/frontend-fellows-slides</a></li>
+            <br>
+            <li><a href="https://mochajs.org/">mochajs.org</a></li>
+            <li><a href="http://chaijs.com/">chaijs.com</a></li>
+            <li><a href="https://github.com/mfncooper/mockery">github.com/mfncooper/mockery</a></li>
+            <li><a href="http://sinonjs.org/">sinonjs.org</a></li>
+            <li><a href="https://github.com/pgte/nock">github.com/pgte/nock</a></li>
+            <li><a href="https://travis-ci.org/">travis-ci.org</a></li>
         </ul>
 
         <p>
