Замечания по оформлению

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
 	<link rel="stylesheet" href="css/reveal.css">
-	<link rel="stylesheet" href="css/theme/blood.css">
+	<link rel="stylesheet" href="css/theme/night.css">
     <link rel="stylesheet" href="css/user.css">
 
 	<!-- Code syntax highlighting -->
@@ -36,7 +36,7 @@
 		<h3>как я подсел на тесты</h3>
 
         <p>Сергей Жигалов</p>
-        <p><span style="color: red">Я</span>ндекс</p>
+        <p><img src="images/logo.svg" alt="Яндекс" style="background-color: #111111" /></p>
 	</section>
 
     <section>
