--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ function hashTagGenerator(words) {
 <section>
     <section>
         <h2>Часть II</h2>
-        <h3>Тетирование клиентского кода</h3>
+        <h3>Тестирование клиентского кода</h3>
     </section>
 
     <section data-background="images/twitter-signin.jpg" class='image'>
